症状カードの説明文・リスト内容を復元し、全カードで均一に情報が表示されるよう修正

--- a/index.html
+++ b/index.html
@@ -1631,14 +1631,14 @@
                         <i class="fas fa-child"></i>
                     </div>
                     <h3>お子様の足の変形が気になる</h3>
-                    <p>扁平足、外反母趾、内反小趾など、お子様の足の変形が気になりませんか？成長期の足は柔らかく変形しやすいため、早期の対応が重要です。</p>
+                    <p>成長期の足は柔らかく、扁平足や外反母趾などの変形が起こりやすい時期です。早期発見・早期対応が将来の健康につながります。</p>
                     <div class="symptom-details">
                         <h4>🔍 こんな症状ありませんか？</h4>
                         <ul>
                             <li>土踏まずが平ら</li>
-                            <li>親指が内側に曲がっている</li>
-                            <li>小指が外側に曲がっている</li>
-                            <li>足の裏にタコができやすい</li>
+                            <li>親指が内側に曲がっている（外反母趾）</li>
+                            <li>小指が外側に曲がっている（内反小趾）</li>
+                            <li>足の裏にタコやマメができやすい</li>
                         </ul>
                     </div>
                 </div>
@@ -1648,14 +1648,14 @@
                         <i class="fas fa-walking"></i>
                     </div>
                     <h3>歩行や運動で転びやすい</h3>
-                    <p>お子様がよく転んだり、歩くときに疲れやすそうにしていませんか？足のバランスが崩れていると、転倒リスクが高まります。</p>
+                    <p>足のバランスが崩れると、転倒やつまずきが増えたり、運動が苦手になったりします。インソールで正しい歩行をサポートします。</p>
                     <div class="symptom-details">
                         <h4>⚡ こんな症状ありませんか？</h4>
                         <ul>
-                            <li>よく転ぶ、つまずく</li>
-                            <li>歩くときに疲れやすい</li>
-                            <li>運動が苦手</li>
-                            <li>姿勢が悪い</li>
+                            <li>よく転ぶ・つまずく</li>
+                            <li>歩くとすぐ疲れる</li>
+                            <li>運動が苦手・嫌がる</li>
+                            <li>姿勢が悪い・猫背になりやすい</li>
                         </ul>
                     </div>
                 </div>
@@ -1665,7 +1665,7 @@
                         <i class="fas fa-heartbeat"></i>
                     </div>
                     <h3>足の痛みや違和感がある</h3>
-                    <p>お子様が足の痛みを訴えたり、歩くのを嫌がったりしていませんか？足の痛みは、体の他の部分にも影響を与える可能性があります。</p>
+                    <p>足の痛みや違和感は、成長や使いすぎ、足の変形が原因のことも。放置せず、専門医にご相談ください。</p>
                     <div class="symptom-details">
                         <h4>🎯 こんな症状ありませんか？</h4>
                         <ul>
