症状カードの説明文・リストの色とopacityを強制的に白に修正し、確実に見えるよう改善

--- a/index.html
+++ b/index.html
@@ -1390,6 +1390,21 @@
             clip-path: polygon(0 0, 100% 0, 100% 100%, 0 70%);
             margin-top: -50px;
         }
+
+        .symptom-details h4,
+        .symptom-details ul,
+        .symptom-details li,
+        .zoom-card p,
+        .zoom-card h3 {
+            color: #fff !important;
+            opacity: 1 !important;
+        }
+        .symptom-details li::before {
+            color: #43e97b !important;
+        }
+        .symptom-details {
+            background: rgba(0,0,0,0.08) !important;
+        }
     </style>
 </head>
 <body>
